[gd_scene load_steps=16 format=3 uid="uid://bstolvxoeua5n"]

[ext_resource type="Script" path="res://wizard_enemy.gd" id="1_o00ni"]
[ext_resource type="Texture2D" uid="uid://cvvv8a5pjwiiv" path="res://all art/kenney_tiny-dungeon/Tiles/tile_0111.png" id="1_oofvk"]
[ext_resource type="Texture2D" uid="uid://bfvvq1krkdden" path="res://all art/explosion animations - emily/explosion1.png" id="2_3qd5t"]
[ext_resource type="Texture2D" uid="uid://dul0dfr4hjpcw" path="res://all art/explosion animations - emily/explosion2.png" id="3_4y5st"]
[ext_resource type="Texture2D" uid="uid://dgkwj8bns7851" path="res://all art/explosion animations - emily/explosion3.png" id="4_vx516"]
[ext_resource type="Texture2D" uid="uid://cg704e3q3xwrd" path="res://all art/explosion animations - emily/explosion4.png" id="5_cu707"]
[ext_resource type="Texture2D" uid="uid://benndmddp3t2f" path="res://all art/explosion animations - emily/explosion5.png" id="6_0fffr"]
[ext_resource type="Texture2D" uid="uid://wbcsvy88yw70" path="res://all art/explosion animations - emily/explosion6.png" id="7_r0pgo"]
[ext_resource type="AudioStream" uid="uid://cp7mqp8c7eci6" path="res://all art/sounds effects/enemyHurt.wav" id="9_iemyv"]
[ext_resource type="AudioStream" uid="uid://c6e34ffta2ayn" path="res://all art/sounds effects/enemyDeath.wav" id="10_kce57"]
[ext_resource type="Script" path="res://Projectiles.gd" id="11_bv4dk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c6nvh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3qd5t")
}, {
"duration": 1.0,
"texture": ExtResource("3_4y5st")
}, {
"duration": 1.0,
"texture": ExtResource("4_vx516")
}, {
"duration": 1.0,
"texture": ExtResource("5_cu707")
}, {
"duration": 1.0,
"texture": ExtResource("6_0fffr")
}, {
"duration": 1.0,
"texture": ExtResource("7_r0pgo")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_oofvk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_snyrs"]
radius = 21.0
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wsd00"]
radius = 293.015

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7pmb"]
size = Vector2(38, 39)

[node name="WizardEnemy" type="CharacterBody2D"]
script = ExtResource("1_o00ni")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 9.53674e-07)
scale = Vector2(3.03125, 2.96875)
sprite_frames = SubResource("SpriteFrames_c6nvh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_snyrs")
metadata/_edit_lock_ = true

[node name="ShootProjectile" type="Timer" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_wsd00")
metadata/_edit_lock_ = true

[node name="HurtBox" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_n7pmb")
metadata/_edit_lock_ = true

[node name="EnemyHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_iemyv")

[node name="EnemyDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_kce57")
volume_db = -10.0

[node name="ShootPosition" type="Marker2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]
script = ExtResource("11_bv4dk")

[connection signal="timeout" from="ShootProjectile" to="." method="_on_shoot_projectile_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
